# signal-radar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  README.md  VALIDATION_RESULTS.md  check_validations.py  docker-compose.yml  inspect_db.py  pyproject.toml  requirements-api.txt  requirements.txt  run_all_validations.sh  sanity_check.py
api/: app.py  config.py  dependencies.py
cli/: analyze.py  compare.py  data.py  runner.py  screen.py  validate.py
config/: assets_etf_us.yaml  assets_forex.yaml  assets_us.yaml  fee_models.yaml  param_grids.yaml  production_params.yaml  universe_loader.py
data/: base_loader.py  cache_manager.py  db.py  positions.json  signal_history.csv  universe.py  yahoo_loader.py
deploy/: README.md  crontab  deploy.sh  entrypoint.sh
docs/: ANALYSIS_IBS_TOM.md  PHASE1_RESULTS.md  PHASE2_RESULTS.md  PHASE2_STOCKS_RESULTS.md  ROADMAP.md  SCALP_RADAR_AUDIT.md  SIGNAL_RADAR_AUDIT.md  WORKFLOW_BACKTEST.md
engine/: backtest_config.py  fast_backtest.py  fee_model.py  indicator_cache.py  indicators.py  mean_reversion_backtest.py  notifier.py  simulator.py  types.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
optimization/: overfit_detection.py  report.py  walk_forward.py
scripts/: analyze_drawdowns.py  compare_ibs_exit_timing.py  compare_ibs_tom.py  daily_scanner.py  investigate_ibs_forex.py  monthly_refresh.py  optimize.py  portfolio_backtest.py  portfolio_validation.py  refresh_metadata.py  run_wfo.py  validate_donchian_forex.py  validate_rsi2_expanded.py  validate_rsi2_final.py  (+7 more)
(+114 files in other folders)
